2001-04-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ports/winnt/ntpd/ntpd.dsp:
	* ports/winnt/ntpd/hopf_PCI_io.c:
	* ports/winnt/include/hopf_PCI_io.h:
	* ports/winnt/include/config.h:
	* ntpd/refclock_hopfser.c:
	* ntpd/refclock_hopfpci.c:
	* ntpd/refclock_conf.c:
	* ntpd/ntp_control.c:
	* ntpd/Makefile.am:
	* libntp/clocktypes.c:
	* include/ntp.h:
	* include/hopf6039.h:
	* include/Makefile.in:
	* include/Makefile.am:
	* html/pic/fg6039.jpg:
	* html/refclock.htm:
	* html/driver39.htm:
	* html/driver38.htm:
	* html/copyright.htm:
	Updated Oncore dudes.

	* configure.in:
	HOPF drivers and documentation.
	From: Bernd Altmeier <altmeier@atlsoft.de> (with some light
	hacking from Harlan to clean up indentation and lose the // comments)

	* ntpd/refclock_oncore.c: 
	* ntpd/refclock_conf.c: Make it go.
	From: Reg Clemens <reg@dwf.com>

	* configure.in (openssl): Publish and default to RSAREF; hide
	openssl, and only use it if explicitly requested (at least until
	we work with it).

2001-04-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/y2k.htm:
	* html/tickadj.htm:
	* html/release.htm:
	* html/refclock.htm:
	* html/quick.htm:
	* html/pps.htm:
	* html/ntptrace.htm:
	* html/ntptime.htm:
	* html/ntpq.htm:
	* html/ntpdc.htm:
	* html/ntpdate.htm:
	* html/ntpd.htm:
	* html/miscopt.htm:
	* html/index.htm:
	* html/genkeys.htm:
	* html/exec.htm:
	* html/driver7.htm:
	* html/driver22.htm:
	* html/copyright.htm:
	* html/confopt.htm:
	* html/build.htm:
	* html/authopt.htm:
	* html/assoc.htm:
	Updates from Dave Mills.
	
2001-04-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (OPENSSL): Just use -lcrypto.
	Reported by Dave Mills.

2001-03-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k20

	* ntpd/refclock_heath.c: Add support for GC-1000 II.
	From Dave Mills.

	* ntpd/ntp_proto.c (transmit): Check peer->unreach.
	(peer_clear): peer->outdate is a f(BURST_INTERVAL1), not
	NTP_MINPOLL.
	* ntpd/ntp_loopfilter.c (local_clock): mode_ntpdate stuff.