@@ -5,7 +5,7 @@ AC_CANONICAL_SYSTEM
 AC_DEFINE_UNQUOTED(STR_SYSTEM, "$target")
 AM_CONFIG_HEADER(config.h)
 AC_ARG_PROGRAM
-AM_INIT_AUTOMAKE(ntp, 4.0.99k21)
+AM_INIT_AUTOMAKE(ntp, 4.0.9k23)
 AC_PREREQ(2.49)
 
 ac_cv_var_oncore_ok=no
