@@ -1,3 +1,4 @@
+* Preparation for OpenSSL support
 * Resolver changes/improvements are not backward compatible with mode 7
   requests (which are implementation-specific anyway)
 * leap second stuff
@@ -6,14 +7,14 @@
 * scripts/ntp-close
 * PPS cleanup and improvements
 * readline support for ntpdc
-* ulink331 driver
 * Crypto/authentication rewrite
 * WINNT builds with MD5 by default
 * WINNT no longer requires Perl for building with Visual C++ 6.0
 * algorithmic improvements, bugfixes
 * Solaris dosynctodr info update
 * html/pic/* is *lots* smaller
-* New drivers: Forum Graphic GPS, WWV/H
+* New/updated drivers: Forum Graphic GPS, WWV/H, Heath GC-100 II, HOPF
+  serial and PCI, ONCORE, ulink331 
 * Rewrite of the audio drivers
 (4.0.99)
 * Driver updates: CHU, DCF, GPS/VME, Oncore, PCF, Ulink, WWVB, burst
